--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html,body{
         display: grid;
         height: 10%;
         position: absolute;
-        top: 5px; left: 550px; //позиция 
+        top: 5px; left: 87vh; //позиция 
 
 }
 
